force-app/main/default/objects/Schindler_Invoice_History__c/Schindler_Invoice_History__c.object-meta.xml
<CustomObject>
    <description>History of Schindler Invoices</description>
    <label>Invoice History</label>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>