force-app/main/default/objects/Schindler_Invoice_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Schindler_Invoice_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>