force-app/main/default/objects/Schindler_Invoice_History__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <inlineHelpText>Date Customer Approves Invoice</inlineHelpText>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>