force-app/main/default/objects/Schindler_Invoice_History__c/fields/Audit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Audit_Comments__c</fullName>
    <inlineHelpText>Mates comments about this invoice, visible to the customer.</inlineHelpText>
    <label>Audit Comments</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>