force-app/main/default/objects/Schindler_Invoice_History__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <label>Bill To</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>