force-app/main/default/objects/Schindler_Invoice_History__c/fields/Billing_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Id__c</fullName>
    <label>Billing Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>