force-app/main/default/objects/Schindler_Invoice_History__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Case that has the Pdf of invoice</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Schindler_Invoice_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>