force-app/main/default/objects/Schindler_Invoice_History__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <inlineHelpText>For TK, equivalent to Customer #</inlineHelpText>
    <label>Contract</label>
    <length>14</length>
    <type>Text</type>
</CustomField>