force-app/main/default/objects/Schindler_Invoice_History__c/fields/Customer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comments__c</fullName>
    <inlineHelpText>Any Comment the customer wishes to share about this invoice</inlineHelpText>
    <label>Customer Comments</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>