force-app/main/default/objects/Schindler_Invoice_History__c/fields/Customer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Name__c</fullName>
    <formula>Account__r.Customer_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Contact Name</label>
    <type>Text</type>
</CustomField>