force-app/main/default/objects/Schindler_Invoice_History__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description>Email to send the email alert to the Customer</description>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>