force-app/main/default/objects/Schindler_Invoice_History__c/fields/Date_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Service__c</fullName>
    <description>Date the service was received.</description>
    <inlineHelpText>Date the service was received.</inlineHelpText>
    <label>Date of Service</label>
    <type>Date</type>
</CustomField>