force-app/main/default/objects/Schindler_Invoice_History__c/fields/Days_To_Pay__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Pay__c</fullName>
    <inlineHelpText>Invoice Days to Pay</inlineHelpText>
    <label>Days To Pay</label>
    <length>100</length>
    <type>Text</type>
</CustomField>