force-app/main/default/objects/Schindler_Invoice_History__c/fields/DaysToPay__c.field-meta.xml
<CustomField>
    <fullName>DaysToPay__c</fullName>
    <label>DaysToPay</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>