force-app/main/default/objects/Schindler_Invoice_History__c/fields/Disputed_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Disputed_Close_Date__c</fullName>
    <description>Date dispute was closed.</description>
    <label>Disputed Close Date</label>
    <type>Date</type>
</CustomField>