force-app/main/default/objects/Schindler_Invoice_History__c/fields/Disputed_Date__c.field-meta.xml
<CustomField>
    <fullName>Disputed_Date__c</fullName>
    <description>Date dispute was clicked by customer.</description>
    <label>Disputed Date</label>
    <type>Date</type>
</CustomField>