force-app/main/default/objects/Schindler_Invoice_History__c/fields/Disputed_Result__c.field-meta.xml
<CustomField>
    <fullName>Disputed_Result__c</fullName>
    <description>I think there is a list of options this should have, like void, accepted, rejected but I can&apos;t find it at the moment.</description>
    <label>Disputed Result</label>
    <length>40</length>
    <type>Text</type>
</CustomField>