force-app/main/default/objects/Schindler_Invoice_History__c/fields/Duns_Number__c.field-meta.xml
<CustomField>
    <fullName>Duns_Number__c</fullName>
    <label>Duns Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>