force-app/main/default/objects/Schindler_Invoice_History__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipName>Schindler_Invoice_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>