force-app/main/default/objects/Schindler_Invoice_History__c/fields/Equipment_Name__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Name__c</fullName>
    <formula>Equipment__r.Display_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment_Name</label>
    <type>Text</type>
</CustomField>