force-app/main/default/objects/Schindler_Invoice_History__c/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <label>Expenses</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>