force-app/main/default/objects/Schindler_Invoice_History__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <label>Fax</label>
    <length>14</length>
    <type>Text</type>
</CustomField>