force-app/main/default/objects/Schindler_Invoice_History__c/fields/Federal_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_Id__c</fullName>
    <label>Federal Tax Id</label>
    <length>14</length>
    <type>Text</type>
</CustomField>