force-app/main/default/objects/Schindler_Invoice_History__c/fields/Field_Contact__c.field-meta.xml
<CustomField>
    <fullName>Field_Contact__c</fullName>
    <label>Field Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>