force-app/main/default/objects/Schindler_Invoice_History__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <inlineHelpText>For Auditmate to record details on the invoice.  These are not visible by the customer.</inlineHelpText>
    <label>Internal Comments</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>