force-app/main/default/objects/Schindler_Invoice_History__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number - not used</label>
    <length>20</length>
    <type>Text</type>
</CustomField>