force-app/main/default/objects/Schindler_Invoice_History__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UserStatus__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Partially Credited</fullName>
            </value>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>