force-app/main/default/objects/Schindler_Invoice_History__c/fields/Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total__c</fullName>
    <label>Invoice Total</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>