force-app/main/default/objects/Schindler_Invoice_History__c/fields/Labor__c.field-meta.xml
<CustomField>
    <fullName>Labor__c</fullName>
    <label>Labor</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>