force-app/main/default/objects/Schindler_Invoice_History__c/fields/Local_Office__c.field-meta.xml
<CustomField>
    <fullName>Local_Office__c</fullName>
    <label>Local Office</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>