force-app/main/default/objects/Schindler_Invoice_History__c/fields/Mate_Support_Status__c.field-meta.xml
<CustomField>
    <fullName>Mate_Support_Status__c</fullName>
    <inlineHelpText>Invoice will be visible to customer when &quot;Verified as Invalid&quot; or &quot;Verified as Valid&quot; are selected</inlineHelpText>
    <label>Mate Support Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unverified</fullName>
            </value>
            <value>
                <fullName>Verified as Invalid</fullName>
            </value>
            <value>
                <fullName>Verified as Valid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>