force-app/main/default/objects/Schindler_Invoice_History__c/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <label>Notification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>