force-app/main/default/objects/Schindler_Invoice_History__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity is populated by class SchindlerOcrProcess if it can find a match on Contract Number.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Schindler_Invoice_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>