force-app/main/default/objects/Schindler_Invoice_History__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <inlineHelpText>For TK, it is SR #</inlineHelpText>
    <label>Order No</label>
    <length>14</length>
    <type>Text</type>
</CustomField>