force-app/main/default/objects/Schindler_Invoice_History__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <label>Payer</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>