force-app/main/default/objects/Schindler_Invoice_History__c/fields/PdfFilename__c.field-meta.xml
<CustomField>
    <fullName>PdfFilename__c</fullName>
    <label>PdfFilename</label>
    <length>50</length>
    <type>Text</type>
</CustomField>