force-app/main/default/objects/Schindler_Invoice_History__c/fields/PdfVersionId__c.field-meta.xml
<CustomField>
    <fullName>PdfVersionId__c</fullName>
    <label>PdfVersionId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>