force-app/main/default/objects/Schindler_Invoice_History__c/fields/Problem_Count__c.field-meta.xml
<CustomField>
    <fullName>Problem_Count__c</fullName>
    <label>Problem Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>