force-app/main/default/objects/Schindler_Invoice_History__c/fields/Problems__c.field-meta.xml
<CustomField>
    <fullName>Problems__c</fullName>
    <label>Problems</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>