force-app/main/default/objects/Schindler_Invoice_History__c/fields/Remit_To__c.field-meta.xml
<CustomField>
    <fullName>Remit_To__c</fullName>
    <label>Remit To</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>