force-app/main/default/objects/Schindler_Invoice_History__c/fields/Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact__c</fullName>
    <label>Sales Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>