force-app/main/default/objects/Schindler_Invoice_History__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <label>Service Location</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>