force-app/main/default/objects/Schindler_Invoice_History__c/fields/SystemStatus__c.field-meta.xml
<CustomField>
    <fullName>SystemStatus__c</fullName>
    <inlineHelpText>Internal Status that is not visible to Portal User</inlineHelpText>
    <label>System Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified_As_Valid</fullName>
                <label>Verified as Valid</label>
            </value>
            <value>
                <fullName>Verified_As_Invalid</fullName>
                <label>Verified as Invalid</label>
            </value>
            <value>
                <fullName>Needs_Review</fullName>
                <label>Needs Review</label>
            </value>
            <value>
                <fullName>Data_Error</fullName>
                <label>Data Error</label>
            </value>
            <value>
                <fullName>Unverified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>