force-app/main/default/objects/Schindler_Invoice_History__c/fields/UserStatus__c.field-meta.xml
<CustomField>
    <fullName>UserStatus__c</fullName>
    <inlineHelpText>External Status that is visible to Portal User</inlineHelpText>
    <label>User Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Awaiting User Action</fullName>
            </value>
            <value>
                <fullName>Renegotiate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>