force-app/main/default/objects/Schindler_Invoice_History__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vendor invoice was received from.</description>
    <inlineHelpText>Vendor invoice was received from.</inlineHelpText>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice History (Vendor)</relationshipLabel>
    <relationshipName>Invoice_History</relationshipName>
    <type>Lookup</type>
</CustomField>