force-app/main/default/objects/Schindler_Invoice_History__c/fields/Vendor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Comments__c</fullName>
    <label>Vendor Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>