force-app/main/default/objects/Schindler_Invoice_History__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <formula>Account__r.Elevator_Vendor_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Name</label>
    <type>Text</type>
</CustomField>