force-app/main/default/objects/Schindler_Invoice_History__c/fields/verActualDuration__c.field-meta.xml
<CustomField>
    <fullName>verActualDuration__c</fullName>
    <description>Verification field</description>
    <inlineHelpText>Actual duration of visit in hours and minutes</inlineHelpText>
    <label>Actual duration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>