force-app/main/default/objects/Schindler_Invoice_History__c/fields/verActualResponseTime__c.field-meta.xml
<CustomField>
    <fullName>verActualResponseTime__c</fullName>
    <description>Verification field</description>
    <inlineHelpText>Contracted response time and actual response time</inlineHelpText>
    <label>Actual response time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>