force-app/main/default/objects/Schindler_Invoice_History__c/fields/verDuringNormalHours__c.field-meta.xml
<CustomField>
    <fullName>verDuringNormalHours__c</fullName>
    <description>Verification field</description>
    <inlineHelpText>Checked if visit occurred during coverage hours</inlineHelpText>
    <label>During Normal Hours</label>
    <length>1</length>
    <type>Text</type>
</CustomField>