force-app/main/default/objects/Schindler_Invoice_History__c/fields/verDuringNormalHoursDesc__c.field-meta.xml
<CustomField>
    <fullName>verDuringNormalHoursDesc__c</fullName>
    <description>Verification field</description>
    <inlineHelpText>Actual time of arrival</inlineHelpText>
    <label>During Normal Hours Desc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>