force-app/main/default/objects/Schindler_Invoice_History__c/fields/VerNoPriorVisitsLast30days__c.field-meta.xml
<CustomField>
    <fullName>VerNoPriorVisitsLast30days__c</fullName>
    <description>Verification field</description>
    <inlineHelpText>Checked if Unit on Invoice has NOT had prior visits with last 30 days</inlineHelpText>
    <label>No prior visits within last 30 days</label>
    <length>1</length>
    <type>Text</type>
</CustomField>