force-app/main/default/objects/Schindler_Invoice_History__c/fields/verOvertimeApproved__c.field-meta.xml
<CustomField>
    <fullName>verOvertimeApproved__c</fullName>
    <description>Verification field</description>
    <inlineHelpText>Checked if overtime is approved in description of work performed.</inlineHelpText>
    <label>Overtime approved in description</label>
    <length>1</length>
    <type>Text</type>
</CustomField>