force-app/main/default/objects/Schindler_Invoice_History__c/fields/verPriorVisitsLast30days__c.field-meta.xml
<CustomField>
    <fullName>verPriorVisitsLast30days__c</fullName>
    <description>Verification field</description>
    <inlineHelpText>Unit Id and Service Date of all visits within last 30 days</inlineHelpText>
    <label>Prior Visits Last 30 days</label>
    <type>TextArea</type>
</CustomField>