force-app/main/default/objects/Schindler_Invoice_History__c/fields/verResponseTime__c.field-meta.xml
<CustomField>
    <fullName>verResponseTime__c</fullName>
    <description>Verification field</description>
    <inlineHelpText>Checked if Invoice passed Response Time verification</inlineHelpText>
    <label>Response Time</label>
    <length>1</length>
    <type>Text</type>
</CustomField>