force-app/main/default/objects/Schindler_Invoice_History__c/fields/verVisitDuration__c.field-meta.xml
<CustomField>
    <fullName>verVisitDuration__c</fullName>
    <description>Verification field</description>
    <inlineHelpText>Check if visit DID NOT last 2 hours or more.</inlineHelpText>
    <label>Visit less than 2 hours</label>
    <length>1</length>
    <type>Text</type>
</CustomField>