force-app/main/default/objects/Schindler_Invoice_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Bill_To__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Contract__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Labor__c</columns>
    <columns>Expenses__c</columns>
    <columns>Invoice_Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>