force-app/main/default/objects/Schindler_Invoice_History__c/listViews/New_this_week.listView-meta.xml
<ListView>
    <fullName>New_this_week</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>New this week</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>